--- a/recipes/potatoes.html
+++ b/recipes/potatoes.html
@@ -8,23 +8,29 @@
 </head>
 <body>
     <h1>Potatoes Recipe</h1>
-    <img src="https://static.fajnegotowanie.pl/media/uploads/media_image/original/przepis/7788/spaghetti-napolitana.jpg" alt="Image of spaghetti in the bowl">
+    <img src="https://hips.hearstapps.com/hmg-prod/images/delish-baked-potatoes-horizontal-1532986298.png" alt="Image of 4 baked potatoes">
     <h3>Description</h3>
-    <p>Easy baked spaghetti made quickly in the oven. Use different cheeses to create your signature dish.</p>
+    <p>These au gratin potatoes are my husband's favorite — he considers it a special occasion every time I make them! The creamy cheese sauce and tender potatoes in this classic French dish combine to make a deliciously addictive experience. 
+    Serve potatoes au gratin with a roast pork loin or beef tenderloin, alongside a green salad and some French bread. 
+    Experiment with different cheeses for variety.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>¾ pound lean ground beef</li>
-        <li>1 (16 ounce) jar spaghetti sauce</li>
-        <li>1 pound spaghetti</li>
-        <li>1 cup shredded mild Cheddar cheese</li>
+        <li>4 medium russet potatoes, thinly sliced</li>
+        <li>1 medium onion, sliced into rings</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>3 tablespoons butter</li>
+        <li>3 tablespoons all-purpose flour</li>
+        <li>½ teaspoon salt</li>
+        <li>2 cups milk</li>
+        <li>1 ½ cups shredded Cheddar cheese</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
-        <li>Cook beef in a large skillet over medium-high heat until crumbly and brown, 8 to 10 minutes. Stir spaghetti sauce into beef. Reduce heat and simmer.</li>
-        <li>Meanwhile, bring a large pot of lightly salted water to a boil. Stir in spaghetti; cook until al dente, 8 to 10 minutes. Drain.</li>
-        <li>Add spaghetti to meat mixture; mix well. Transfer to a 9x13-inch dish. Top with Cheddar cheese.</li>
-        <li>Bake in the preheated oven until heated through and cheese is bubbly, about 30 minutes.</li>
+        <li>Preheat the oven to 400 degrees F (200 degrees C). Butter a 1-quart casserole dish.</li>
+        <li>Layer 1/2 of the potatoes in the bottom of the prepared casserole dish; season with salt and pepper. Layer onion slices over top, then top with with remaining potatoes. Season again with salt and pepper.</li>
+        <li>Melt butter in a medium saucepan over medium heat. Gradually whisk in flour and salt and cook, whisking constantly until raw flour flavor has cooked off, about 1 minute. Gradually add milk, about 1/4 cup at a time, whisking well after each addition to incorporate; the gradual addition and whisking of milk will help avoid lumps in your sauce.</li>
+        <li>Cook, whisking constantly, until the mixture has thickened, 3 to 5 minutes. Stir in cheese all at once; continue stirring until melted, 30 to 60 seconds. Pour cheese sauce over the potatoes, and cover the dish with aluminum foil.</li>
+        <li>Bake in the preheated oven until potatoes are tender and sauce is bubbly, about 1 1/2 hours.</li>
     </ol>
 </body>
 </html>
